"Added Telegram links and updated software data in software.html, and added hover effect for TelegramContainer in style.css"

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1053,6 +1053,7 @@ img {
 .HtmlCssContainer .col.itemBox:hover .card,
 .JavaScriptContainer .col.itemBox:hover .card,
 .ProjectContainer .col.itemBox:hover .card,
+.TelegramContainer .col.itemBox:hover .card,
 .SoftwareContainer .col.itemBox:hover .card {
     scale: 1.08;
     transform: translateY(-15px);
