kiit cse app added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1050,9 +1050,12 @@ img {
 
 
 /* html&css */
+.mostPopularContainer .col.itemBox:hover .card,
+.recentContainer .col.itemBox:hover .card,
 .HtmlCssContainer .col.itemBox:hover .card,
 .JavaScriptContainer .col.itemBox:hover .card,
 .ProjectContainer .col.itemBox:hover .card,
+.projectContainer1 .col.itemBox:hover .card,
 .TelegramContainer .col.itemBox:hover .card,
 .SoftwareContainer .col.itemBox:hover .card {
     scale: 1.08;
@@ -1060,17 +1063,23 @@ img {
     transition: transform 0.5s ease;
 }
 
+.mostPopularContainer .card a,
+.recentContainer .card a,
 .HtmlCssContainer .card a,
 .JavaScriptContainer .card a,
 .ProjectContainer .card a,
+.projectContainer1 .card a,
 .SoftwareContainer .card a {
     overflow: hidden;
     border-radius: 0.375rem 0.375rem 0rem 0rem;
 }
 
+.mostPopularContainer .col.itemBox:hover .card img,
+.recentContainer .col.itemBox:hover .card img,
 .HtmlCssContainer .col.itemBox:hover .card img,
 .JavaScriptContainer .col.itemBox:hover .card img,
 .ProjectContainer .col.itemBox:hover .card img,
+.projectContainer1 .col.itemBox:hover .card img,
 .SoftwareContainer .col.itemBox:hover .card img {
     transform: scale(1.2);
     /* Increase the scale (zoom) of the image on hover */
