--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,6 +108,11 @@ body {
 a {
     text-decoration: none;
     color: var(--primary-color);
+    cursor: pointer;
+}
+
+a:hover{
+    color: var(--primary-hover-color) !important;
 }
 
 /* disable highlighted blue color */
